@@ -1043,10 +1043,13 @@ static gboolean _header_cache(const char UNUSED *key, const char *header, gpoint
 		
 			value = internet_address_list_to_string(alist, TRUE);
 			internet_address_list_destroy(alist);
+
+			safe_value = dm_stresc(value);
+			g_free(value);
+		} else {
+			safe_value = dm_stresc((const char *)raw);
 		}
 
-		safe_value = dm_stresc(value);
-		g_free(value);
 
 		g_string_printf(q,"INSERT INTO %sheadervalue (headername_id, physmessage_id, headervalue) "
 				"VALUES (%llu,%llu,'%s')", DBPFX, id, self->physid, safe_value);
